# LLM-Visualization

./: README.md
attention/: README.md  simple.py
attention/wow/: attention.py  main.py
attention/wow/static/: index.html
attention_ave/wow/: attention.py  main.py
attention_ave/wow/static/: index.html
attention_ave_prob/: README.md  pyproject.toml
attention_ave_prob/wow/: attention.py  main.py
attention_ave_prob/wow/static/: index.html
